# yolo

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  README.md  SPEC.md  config.example  context-injection-notes.md  pyproject.toml  setup-yolo.sh  tox.ini
.github/workflows/: ci.yml  pr-scout.yml
container-extras/: apt.sh  git-delta.sh  python.sh
demo/: demo.md
design/: HACK_DECISIONS.md  LEGACY_SPEC.md  REDESIGN_HACKIN.md
design/legacy/: test-arg-parsing-fixed.sh  test-arg-parsing.sh
docs/: tutorial.md
image-extras/: apt.sh  datalad.sh  git-delta.sh  jj.sh  pip.sh  playwright.sh  python.sh
images/: Containerfile.base  Containerfile.extras  Dockerfile  Dockerfile.datalad  Dockerfile.datalad-jj
legacy/: test-worktree-feature.sh
notes/: TODO.md  sandbox-comparison.md
notes/ideas/: read-only-mode.md  sandboxed-review-subagent.md
notes/issues/: issue-12.md  issue-23.md  issue-27.md  issue-3.md  issue-33.md  issue-36.md  issue-39.md  issue-4.md  issue-42.md  issue-46.md  issue-47.md  issue-49.md  issue-5.md  issue-51-selinux.md  issue-54.md  issue-draft-config-environments.md  non-home-worktree-issue.md
notes/prs/: pr-48.md  pr-51.md  pr-53.md  pr-55.md  pr-56.md  pr-57.md
security-reports/: audit-20260328-125651.md
src/yolo/: builder.py  cli.py  config.py  launcher.py
tests/: features_to_test.md  setup-yolo.bats  test-extras-build.sh  test_builder.py  test_cli.py  test_config.py  test_launcher.py  yolo.bats
tests/integration/: conftest.py  test_image_extras.py
tests/test_helper/: common.bash
(+5 files in other folders)
